# afread

./: .gitattributes  .gitignore  LICENSE  LICENSE-3RD-PARTY.txt  LICENSE.txt  README.md
source/: .clang-format  CMakeLists.txt  CMakeSettings.json  EclipseNinjaClang.bat  utils.cmake
source/affinity/: .clang-tidy  CMakeLists.txt  LICENSE.txt  README.md
source/affinity/examples/: GetPixel.cpp  PrintLayers.cpp
source/affinity/include/Affinity/: Affinity.h  Archive.h  Bitmap.h  Cpp.h  CppPrivate.h  CppStructs.h  Json.h  Model.h  Reader.h  Utils.h
source/affinity/src/: Affinity.cpp  Archive.cpp  Bitmap.cpp  Cpp.cpp  CppPrivate.cpp  CppStructs1.cpp  CppStructs2.cpp  Json.cpp  Model.cpp  Reader.cpp
source/afread/: CMakeLists.txt
source/afread/src/: Compression.cpp  Compression.h  Main.cpp  WindowsDriver.cpp  WindowsDriver.h
source/cxxopts/: CMakeLists.txt
source/miniz/: CMakeLists.txt
source/zstd/: CMakeLists.txt
